# zer0data

./: .dockerignore  .env.example  .gitignore  .gitmodules  404.html  CHANGELOG.md  README.md  docker-compose.yml  index.html  pyproject.toml  sitemap.xml  test-compose-downloader.yml  test-compose-ingestor.yml
.github/workflows/: sdk-docs-deploy.yml
api/client/: index.html
changelog/: index.html
configuration/: index.html
deployment/: index.html
docker/: README.md
docker/clickhouse/: compose.yml  init.sql
docker/downloader/: Dockerfile  README.md  compose.yml
docker/ingestor/: Dockerfile  compose.yml
docker/sync/: Dockerfile  compose.yml  entrypoint.sh
docker/tests/: INTEGRATION_TEST_RESULTS.md  test-compose-clickhouse.yml
docs/: sdk-standalone-installation-guide.md
docs/plans/: 2025-02-10-zer0data-design.md  2025-02-10-zer0data-implementation.md  2025-02-12-binance-public-data-integration.md  2026-02-12-docker-deployment-design.md  2026-02-12-docker-deployment.md  2026-02-13-kline-data-cleaning-summary.md  2026-02-13-kline-data-cleaning.md  2026-02-13-multi-interval-kline-design.md  2026-02-13-multi-interval-kline-implementation.md  2026-02-18-sdk-factor-service-design.md
faq/: index.html
getting-started/: index.html
ingestor/: .coverage  README.md  coinmetrics-docker-import-readme.md  pyproject.toml
ingestor/src/zer0data_ingestor/: __init__.py  cli.py  config.py  constants.py  ingestor.py  schema.py
ingestor/src/zer0data_ingestor/cleaner/: __init__.py  kline.py
ingestor/src/zer0data_ingestor/downloader/: __init__.py  binance.py
ingestor/src/zer0data_ingestor/fetcher/: __init__.py  core.py  types.py
ingestor/src/zer0data_ingestor/fetcher/sources/: __init__.py  coinmetrics.py  exchange_info.py
ingestor/src/zer0data_ingestor/parser/: __init__.py  kline.py  zip_parser.py
ingestor/src/zer0data_ingestor/writer/: __init__.py  clickhouse.py
ingestor/tests/: conftest.py  test_cli.py  test_constants.py  test_ingestor.py
ingestor/tests/cleaner/: test_kline.py
ingestor/tests/downloader/: __init__.py  test_binance.py
ingestor/tests/fetcher/: test_coinmetrics.py
ingestor/tests/integration/: test_full_flow.py
ingestor/tests/parser/: test_kline.py  test_zip_parser.py
ingestor/tests/writer/: __init__.py  test_clickhouse.py
installation/: index.html
scripts/: fetch_exchange_info.py
sdk/: README.md  docker-compose.docs.yml  mkdocs.yml  pyproject.toml  requirements-docs.txt
sdk/docs/: changelog.md  configuration.md  deployment.md  faq.md  getting-started.md  index.md  installation.md
sdk/docs/api/: client.md
sdk/src/zer0data/: __init__.py  client.py  factor.py  kline.py  symbols.py
sdk/tests/: conftest.py  run_kline_query.py  run_kline_query_2025_1h.py  test_client.py  test_kline.py  test_symbols.py
search/: search_index.json
sync/: README.md  config.py  config.yaml  state.py  sync.py  transfer.py
