[project]
name = "zer0data"
version = "0.1.0"
description = "Binance perpetual futures data platform"
authors = [{ name = "zer0data" }]
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "clickhouse-connect ~=0.7.0",
    "pandas ~=2.0",
    "polars ~=0.20",
    "pyarrow ~=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest >=8.0",
    "pytest-cov >=4.1",
    "black >=24.0",
    "ruff >=0.1",
]

[project.scripts]
zer0data = "zer0data_ingestor.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling]
# Use uv for dependency management
dev-mode-dirs = ["."]
dev-mode = "uv"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (requires docker-compose)",
]
