[tool.poetry]
name = "zer0data-ingestor"
version = "0.1.0"
description = "Binance data ingestion service"
authors = ["zer0data"]
readme = "README.md"
packages = [{include = "zer0data_ingestor", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
clickhouse-connect = "^0.7"
click = "^8.1"
requests = "^2.31"
python-dateutil = "^2.8"
apscheduler = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"
black = "^24.0"
ruff = "^0.1"
mypy = "^1.8"

[tool.poetry.scripts]
zer0data-ingestor = "zer0data_ingestor.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
