[tool.poetry]
name = "zer0data"
version = "0.1.0"
description = "Binance perpetual futures data SDK"
authors = ["zer0data"]
readme = "README.md"
packages = [{include = "zer0data", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
clickhouse-connect = "^0.7"
polars = "^0.20"
pyarrow = "^14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"
black = "^24.0"
ruff = "^0.1"
mypy = "^1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
