[project]
name = "zer0data-sdk"
version = "0.1.0"
description = "SDK for querying zer0data data in ClickHouse"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "zer0data" }]
dependencies = [
    "clickhouse-connect ~=0.11.0",
    "polars ~=1.38.1",
]

[project.optional-dependencies]
dev = [
    "pytest >=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zer0data"]
